--- a/purchase.html
+++ b/purchase.html
@@ -4,6 +4,46 @@
 	<title></title>
 </head>
 <body>
+<div>
+	<div>
+		<header>
+				<h1 align="center">Purchase</h1>													
+		</header>
+	</div>
+</div>
+				<div>
+			<div>
+		
 
+
+<div>
+	<h3 style="text-align: center;">Purchases can be made directly by <a href="#">contacting me via email</a> or call&nbsp;209-223-1814.
+	</h3>
+		</div>
+	</div>
+</div></div></div></div>
+			<h3>My pieces are available at these online locations</h3>
+
+		</div>
+	</div>
+
+			<p><a href="#">Purchase directly on Etsy</a></p>
+<p><a href="#">ugallery.com</a></p>
+<p><a href="#">artfulhome.com</a></p>
+<p><a href="#">zatista.com</a></p>
+<p><a href="#">saatchiart.com</a></p>
+
+		</div>
+	</div>
+</div></div></div>
+			<p><a href="#">fineartamerica.com</a></p>
+<p><a href="#">Blink Art Resource</a></p>
+<p><a href="#">Wearable Art from Vida.com</a></p>
+<p><a href="#">artspecifier.com</a></p>
+<p><a href="#">graphicencounter.com</a></p>
+
+		</div>
+	</div>
+</div></div></div></div>
 </body>
 </html>
