--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>galleries</title>
+	<title></title>
 	<style type="text/css">
 		.row {
     margin-left: -15px;
