--- a/landscapes.html
+++ b/landscapes.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Landscapes - Karen Hole</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+	<h1 style="text-align: center; font-family: arial;"><b>LANDSCAPES</b></h1>
+	<hr><br>
+	<div class="row_landscape">
+  <div class="column_landscape">
+    <img src="landscapes1.jpg" style="width:100%">
+  </div>
+  <div class="column_landscape">
+    <img src="landscapes2.jpg" style="width:100%">
+  </div>
+  <div class="column_landscape">
+    <img src="landscapes3.jpg" style="width:100%">
+  </div>
+  <div class="column_landscape">
+  	<img src="landscapes4.jpg" style="width: 100%">
+  </div>
+</div>
 </body>
 </html>
