--- a/events.html
+++ b/events.html
@@ -1,9 +1,77 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="profile" href="http://gmpg.org/xfn/11">
+	<link rel="pingback" href="http://www.karenhale.com/xmlrpc.php">
+
+		
+	<title>Events - Karen Hale</title>
 </head>
 <body>
+
+		<h1 style="text-align: center"> EVENTS </h1>
+		<br>
+		<br>
+		<p>2019  Show schedule for my Abstract – Contemporary paintings</p>
+		<table style="width:100%; border:2px">
+			<tr style="padding-left:20px">
+<td>April 12-14</td>
+<td>
+Menlo Park Art Festival
+Santa Cruz Ave
+Menlo Park, CA
+</td>
+</tr>
+<tr>
+<td>May 4-6</td>td>
+<td>
+Saratoga Art Festival    –  Space # 572/573
+West Valley College – 14000 Fruitvale Ave – Saratoga, CA
+</td>
+</tr>
+<tr>
+<td>May 18-19</td>
+<td>
+Los Altos “Art In The Park”   – Space # 311
+Along Foothill Blvd, downtown Los Altos, CA
+</td>
+</tr>
+<tr>
+<td>July 13-14</td>
+<td>
+Los Altos Art and Wine Festival.   SPACE # 600/602
+Main and State Sts,  downtown Los Altos, CA
+</td>
+</tr>
+<tr>
+<td>July 20-21</td>
+<td>
+Menlo Summerfest   SPACE # 400/444
+Santa Cruz Ave, downtown Menlo Park,  CA.    
+</td>
+</tr>
+<tr>
+<td>Aug 24-25</td>
+<td>
+Palo Alto Festival of the Arts    –  SPACE # 112/114
+University Ave, Palo Alto
+</td>
+</tr>
+<tr>
+<td>Sept 14-15</td>
+<td>
+Open Studio
+
+14201 STATE HWY 88
+JACKSON, CA 95642
+(When you get to Jackson, turn left on Hwy 88 at the Hwy 49/88 split, and drive one mile east.
+Look for a sign that marks the next left turn to my studio. It’s shortly after the 55 MPH sign. There is a small street sign that says “Falcon Ridge”)
+</td>
+</tr>
+		</table>
 
 </body>
 </html>
