--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Contact </title>
+	<title>Contact Us</title>
 </head>
 <body>
+	<p style="text-align: center; font-size: 20pt " > <b>CONTACT </p>
+  <form action="/action_page.php">
+  Your Name(Required):<br>
+  <input type="text" style="width:800px" name="message">
+  <br>
+  Your E-Mail(Required):<br>
+  <input type="text" name="email" style="width:800px" >
+  <br><br>
+  Your Message:
+  <textarea name="message" rows="10" cols="30"></textarea>
+  <input type="submit" value="Send">
+</form> 
 
 </body>
 </html>
