--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,137 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Contact Us</title>
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
+  <style>
+
+.navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  color: gray;
+}
+
+input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+}
+
+textarea {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  margin: 8px 0;
+
+}
+
+input[type=submit] {
+  background-color: red;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: blue;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+
+
+}
+.link:hover {
+
+  background-color:gray;
+
+}
+
+
+  </style>
+
+
 </head>
 <body>
-	<p style="text-align: center; font-size: 20pt " > <b>CONTACT </p>
-  <form action="/action_page.php">
-  Your Name(Required):<br>
-  <input type="text" style="width:800px" name="message">
-  <br>
-  Your E-Mail(Required):<br>
-  <input type="text" name="email" style="width:800px" >
-  <br><br>
-  Your Message:
-  <textarea name="message" rows="10" cols="30"></textarea>
-  <input type="submit" value="Send">
-</form> 
+<header style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px; padding-left: 30px; " >  
+  <i class='fas fa-phone' style="color: white;"></i>: 209-223-1814  
 
+<i class='fas fa-envelope' style="color: white; padding-left: 5pt;" ></i> : <a class= "link">karenhale@karenhale.com</a>
+</header >
+  <div style="width:100%; background-color:lightblue; background-image: url(backgroundi.jpg); background-repeat: no-repeat; height: 1000%; border-image-width: 100px">
+    <table align=center >
+      <tr >
+        <td align=center style = "padding-top: 0px; color: white;">
+          <p style="font-size: 50pt;  font-family: arial">KAREN HALE</p>
+          <p style="font-size: 26pt; font-family: arial">ABSTRACT, CONTEMPORARY</p>
+          <p style="font-size: 22pt; font-family: arial">MIXED MEDIA PAINTINGS</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          
+ 
+          <div class = "navbar" align = center>
+            <a href="#home">HOME</a>
+            <a href="#news">PORTFOLIO</a>
+            <a href="#purchase">PURCHASE</a>
+            <a href="#galleries">GALLERIES</a>
+            <a href="#events">EVENTS</a>
+            <a href="temp_contact.html">ABOUT</a>
+            <a href="#youtube">YOUTUBE</a>
+            <a href="#blog">BLOG</a>
+          </div>
+
+           
+        </td>
+      </tr> 
+    </table>
+  </div>
+  <p align=center style="font-size: 28pt; font-family: arial"><b>CONTACT</p>  
+  <table width="60%" align=center>
+    <tr>
+      <td>
+  <form>
+    Your Name (required)<br>
+    <input type="text" name="firstname">
+    <br>
+    Your Email Address(required)<br>
+    <input type="text" name="lastname">
+    <br>
+    Your Message<br>
+    <textarea></textarea>
+    <br><br>
+    <input type="submit" value="SEND">
+  </form>
+</td>
+</tr>
+</table>
+<footer style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px;">
+  <table width = "100%">
+    <tr>
+      <td width="50%" align= "center">Prices and any other information<br>about the paintings may be obtained by <br>contacting me directly via email <br>or phone at 209-223-1814.
+      </td>
+      <td width="50%" align= "center">All artwork appearing on this website <br>is the property of Karen Hale and <br>is protected under United States and <br>International law. The artwork may <br>not be reproduced, stored, or <br>manipulated without the written permission <br>of the artist.
+      </td>
+    </tr>
+    <tr>
+      <td colspan="2" align= "center">© 2019 Karen Hale. All rights reserved
+      </td>
+    </tr>
+  </table>
+  </footer>
 </body>
 </html>
