--- a/events.html
+++ b/events.html
@@ -60,6 +60,9 @@ input[type=submit]:hover {
 
 }
 .table2 {
+	height: 100% ;
+	width: 60% ;
+  padding: 15px;
 	float: left;
 	column-span: 10%;
 	background-color: rgb(240, 240, 240);
@@ -69,8 +72,11 @@ align-content: center;
 	padding-left: 30%;
 }
 .table3 {
+
 	
 }
+th, td ,tr {
+  padding: 13px;
 
   </style>
 
@@ -111,14 +117,17 @@ align-content: center;
       </tr> 
     </table>
   </div>
-  <div>
+  <div >
   	<p align="center" style="font-size: 28pt; font-family: arial"><b> EVENTS </p>
 
 		<p align="center" style="font-size: 22pt; font-family: Helvetica">2019  Show schedule for my Abstract – Contemporary paintings</p>
+	</div>
+	<div  style=" height: 1200px;
+  width: 70%; text-align: center; display: inline-block;" align="center">
 	
-			<table class="table2" width="60%" align=center>
+			<table class="table2" align="center">
     
-			<tr style="padding-left:50px">
+			<tr >
 <td><b>April 12-14</td>
 <td><b>
 Menlo Park Art Festival<br>
@@ -169,15 +178,14 @@ Open Studio
 
 14201 STATE HWY 88
 JACKSON, CA 95642
-(When you get to Jackson, turn left on Hwy 88 at the Hwy 49/88 split, and drive one mile east.
-Look for a sign that marks the next left turn to my studio. It’s shortly after the 55 MPH sign. There is a small street sign that says “Falcon Ridge”)
+
 </td>
 </tr>
 </b>
 </td>
 		</table>
 	</div>
-	<div >
+	<div style="float: right; white-space: 10px ; " >
 		<table class="table3" >
 
 			 <tr>
