--- a/events.html
+++ b/events.html
@@ -137,7 +137,7 @@ Menlo Park, CA
 </td>
 </tr>
 <tr>
-<td><br>May 4-6</td>td>
+<td><br>May 4-6</td>
 <td>
 Saratoga Art Festival    –  <br>Space # 572/573
 West Valley College – 14000 Fruitvale Ave – Saratoga, CA
