--- a/events.html
+++ b/events.html
@@ -54,6 +54,16 @@ input[type=submit]:hover {
 
 
 }
+.div1
+{
+	
+	padding-left: 15%;
+
+}
+.div2{
+
+	
+}
 .link:hover {
 
   background-color:gray;
@@ -123,9 +133,9 @@ th, td ,tr {
 		<p align="center" style="font-size: 22pt; font-family: Helvetica">2019  Show schedule for my Abstract – Contemporary paintings</p>
 	</div>
 	<div  style=" height: 1200px;
-  width: 70%; text-align: center; display: inline-block;" align="center">
+  width: 70%; text-align: center; display: inline-block;" align="center" class="div1">
 	
-			<table class="table2" align="center">
+			<table class="table2" align="center" style="text-align: center">
     
 			<tr >
 <td><b>April 12-14</td>
@@ -183,9 +193,9 @@ JACKSON, CA 95642
 </tr>
 </b>
 </td>
-		</table>
+		</table >
 	</div>
-	<div style="float: right; white-space: 10px ; " >
+	<div style="float: right; " class="div2" >
 		<table class="table3" >
 
 			 <tr>
