--- a/events.html
+++ b/events.html
@@ -133,7 +133,7 @@ th, td ,tr {
 		<p align="center" style="font-size: 22pt; font-family: Helvetica">2019  Show schedule for my Abstract – Contemporary paintings</p>
 	</div>
 	<div  style=" height: 1200px;
-  width: 70%; text-align: center; display: inline-block;" align="center" class="div1">
+  width: 70%; text-align: center; display: inline-block; text-align: justify-all;" align="center" class="div1">
 	
 			<table class="table2" align="center" style="text-align: center">
     
