--- a/events.html
+++ b/events.html
@@ -64,6 +64,9 @@ input[type=submit]:hover {
 
 	
 }
+.link {
+	color: white;
+}
 .link:hover {
 
   background-color:gray;
@@ -96,7 +99,7 @@ th, td ,tr {
 <header style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px; padding-left: 30px; " >  
   <i class='fas fa-phone' style="color: white;"></i>: 209-223-1814  
 
-<i class='fas fa-envelope' style="color: white; padding-left: 5pt;" ></i> : <a class= "link">karenhale@karenhale.com</a>
+<i class='fas fa-envelope' style="color: white; padding-left: 5pt;" ></i> : <a href="mailto:karenhale@karenhale.com " class= "link">karenhale@karenhale.com</a>
 </header >
   <div style="width:100%; background-color:lightblue; background-image: url(backgroundi.jpg); background-repeat: no-repeat; height: 1000%; border-image-width: 100px">
     <table align=center >
