--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ function showSlides(n) {
 <table style="margin: 35px;">
     <tr>
       <td>
-        <a href="#">
+        <a href="#sticks">
           <div class="imglinkcontainer">
         <img src="sticklink.jpg" style="width: 380px; height: 350px;">
         <div class="centered" style="font-size: 20px;"><b>STICKS</b></div>
@@ -197,7 +197,7 @@ function showSlides(n) {
       </a>
       </td>
       <td>
-        <a href="#">
+        <a href="#smallpaintings">
           <div class="imglinkcontainer">
         <img src="smallpaintingslink.jpg" style="width: 380px; height: 350px;">
         <div class="centered" style="font-size: 20px;"><b>SMALL PAINTINGS</b></div>
@@ -205,7 +205,7 @@ function showSlides(n) {
       </a>
       </td>
       <td>
-        <a href="#">
+        <a href="#minipaintings">
           <div class="imglinkcontainer">
         <img src="minipaintingslink.jpg" style="width: 380px; height: 350px;">
         <div class="centered" style="font-size: 20px;"><b>MINI PAINTINGS</b></div>
@@ -217,7 +217,7 @@ function showSlides(n) {
   <table style="margin: 35px;">
     <tr>
       <td>
-        <a href="#">
+        <a href="#sculptural">
           <div class="imglinkcontainer">
         <img src="sculpturelink.jpg" style="width: 275px; height: 250px;">
         <div class="centered" style="font-size: 20px;"><b>SCULPTURAL</b></div>
@@ -233,7 +233,7 @@ function showSlides(n) {
       </a>
       </td>
       <td>
-        <a href="#">
+        <a href="#abstracts">
           <div class="imglinkcontainer">
         <img src="abstractlink.jpg" style="width: 275px; height: 250px;">
         <div class="centered" style="font-size: 20px;"><b>ABSTRACTS</b></div>
@@ -241,7 +241,7 @@ function showSlides(n) {
       </a>
       </td>
       <td>
-        <a href="#">
+        <a href="#florals">
           <div class="imglinkcontainer">
         <img src="floralslink.jpg" style="width: 275px; height: 250px;">
         <div class="centered" style="font-size: 20px;"><b>FLORALS</b></div>
