--- a/events.html
+++ b/events.html
@@ -229,13 +229,13 @@ JACKSON, CA 95642
 	<footer style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px;">
   <table width = "100%">
     <tr>
-      <td width="50%" align= "center" style="color: grey">Prices and any other information about the paintings may be obtained by <br><p style="color: white">contacting me directly via email </p>or phone at 209-223-1814.
+      <td width="50%" align= "center" style="color: grey">Prices and any other information about the paintings may be obtained by <br><a href="contact.html" style="color: white">contacting me directly via email </a>or phone at 209-223-1814.
       </td>
       <td width="50%" align= "center" style="color: grey">All artwork appearing on this website <br>is the property of Karen Hale and <br>is protected under United States and <br>International law. The artwork may <br>not be reproduced, stored, or <br>manipulated without the written permission <br>of the artist.
       </td>
     </tr>
     <tr>
-      <td colspan="2" align= "center" style="color: grey">© 2019 <p style="color: white">Karen Hale</p>.All rights reserved.
+      <td colspan="2" align= "center" style="color: grey">© 2019 <a href="index.html" style="color: white">Karen Hale. </a>All rights reserved.
       </td>
     </tr>
   </table>
