--- a/events.html
+++ b/events.html
@@ -6,94 +6,85 @@
   <style>
 
 .navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+	float: left;
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
 }
 
 .navbar a:hover {
-  color: gray;
+	color: gray;
 }
 
 input[type=text] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
+	width: 100%;
+	padding: 12px 20px;
+	margin: 8px 0px;
 }
 
 textarea {
-  width: 100%;
-  height: 150px;
-  padding: 12px 20px;
-  margin: 8px 0;
+	width: 100%;
+	height: 150px;
+	padding: 12px 20px;
+	margin: 8px 0px;
 
 }
 
 input[type=submit] {
-  background-color: red;
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-decoration: none;
-  margin: 4px 2px;
-  cursor: pointer;
+	background-color: red;
+	border: none;
+	color: white;
+	padding: 16px 32px;
+	text-decoration: none;
+	margin: 4px 2px;
+	cursor: pointer;
 }
 
 input[type=submit]:hover {
-  background-color: blue;
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-decoration: none;
-  margin: 4px 2px;
-  cursor: pointer;
+	background-color: blue;
+	border: none;
+	color: white;
+	padding: 16px 32px;
+	text-decoration: none;
+	margin: 4px 2px;
+	cursor: pointer;
 
 
 }
-.div1
-{
+.div1 {
 	
-	padding-left: 15%;
-
+	padding-left: 350px;
+  	width: 40%; 
+  	height: justify;
+ 	text-align: left; 
+  	display: inline-block; 
+  	text-align: justify-all;
 }
-.div2{
-
-	
+.div2 {
+	padding-right: 550px;
 }
 .link {
 	color: white;
 }
 .link:hover {
-
-  background-color:gray;
-
+	background-color: gray;
 }
 .table2 {
-	height: 100% ;
-	width: 60% ;
-  padding: 15px;
+	height: 100%;
+	width: 100%;
+	padding-top: 50px;
+  	padding-right: 100px;
+  	padding-left: 100px;
+  	padding-bottom: 50px;
 	float: left;
-	column-span: 10%;
+	column-span: 50%;
 	background-color: rgb(240, 240, 240);
+	align-content: left;
 }
-.table2 {
-align-content: center;
-	padding-left: 30%;
-}
-.table3 {
-
-	
-}
-th, td ,tr {
-  padding: 13px;
-
-  </style>
-
-
+</style>
 </head>
 <body>
 <header style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px; padding-left: 30px; " >  
@@ -102,7 +93,7 @@ th, td ,tr {
 <i class='fas fa-envelope' style="color: white; padding-left: 5pt;" ></i> : <a href="mailto:karenhale@karenhale.com " class= "link">karenhale@karenhale.com</a>
 </header >
   <div style="width:100%; background-color:lightblue; background-image: url(backgroundi.jpg); background-repeat: no-repeat; height: 1000%; border-image-width: 100px">
-    <table align=center >
+    <table align=center>
       <tr >
         <td align=center style = "padding-top: 0px; color: white;">
           <p style="font-size: 50pt;  font-family: arial">KAREN HALE</p>
@@ -135,14 +126,12 @@ th, td ,tr {
 
 		<p align="center" style="font-size: 22pt; font-family: Helvetica">2019  Show schedule for my Abstract – Contemporary paintings</p>
 	</div>
-	<div  style=" height: 1200px;
-  width: 70%; text-align: center; display: inline-block; text-align: justify-all;" align="center" class="div1">
+	<div align="center" class="div1">
 	
 			<table class="table2" align="center" style="text-align: center">
-    
 			<tr >
-<td><b>April 12-14</td>
-<td><b>
+<td style="padding:20px"><b>April 12-14</td>
+<td style="padding:20px"><b>
 Menlo Park Art Festival<br>
 
 Santa Cruz Ave
@@ -150,43 +139,43 @@ Menlo Park, CA
 </td>
 </tr>
 <tr>
-<td><br>May 4-6</td>
-<td>
+<td style="padding:20px">May 4-6</td>
+<td style="padding:20px">
 Saratoga Art Festival    –  <br>Space # 572/573
 West Valley College – 14000 Fruitvale Ave – Saratoga, CA
 </td>
 </tr>
 <tr>
-<td>May 18-19</td>
-<td>
+<td style="padding:20px">May 18-19</td>
+<td style="padding:20px">
 Los Altos “Art In The Park”   – Space # 311
 Along Foothill Blvd, downtown Los Altos, CA
 </td>
 </tr>
 <tr>
-<td>July 13-14</td>
-<td>
+<td style="padding:20px">July 13-14</td>
+<td style="padding:20px">
 Los Altos Art and Wine Festival.   SPACE # 600/602
 Main and State Sts,  downtown Los Altos, CA
 </td>
 </tr>
 <tr>
-<td>July 20-21</td>
-<td>
+<td style="padding:20px">July 20-21</td>
+<td style="padding:20px">
 Menlo Summerfest   SPACE # 400/444
 Santa Cruz Ave, downtown Menlo Park,  CA.    
 </td>
 </tr>
 <tr>
-<td>Aug 24-25</td>
-<td>
+<td style="padding:20px">Aug 24-25</td>
+<td style="padding:20px">
 Palo Alto Festival of the Arts    –  SPACE # 112/114
 University Ave, Palo Alto
 </td>
 </tr>
 <tr>
-<td>Sept 14-15</td>
-<td>
+<td style="padding:20px">Sept 14-15</td>
+<td style="padding:20px">
 Open Studio
 
 14201 STATE HWY 88
@@ -198,9 +187,9 @@ JACKSON, CA 95642
 </td>
 		</table >
 	</div>
-	<div style="float: right; " class="div2" >
-		<table class="table3" >
 
+<div style="float: right; " class="div2" >
+		<table class="table3" >
 			 <tr>
       <td>
   <form>
@@ -217,12 +206,6 @@ JACKSON, CA 95642
   </form>
 </td>
 </tr>
-			
-
-
-
-
-
 		</table>
 	</div>
 
