--- a/events.html
+++ b/events.html
@@ -1,23 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Events - Karen Hale</title>
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-
+  <link rel="stylesheet" type="text/css" href="style.css">
   <style>
-
-.navbar a {
-	float: left;
-	display: block;
-	color: white;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 17px;
-}
-
-.navbar a:hover {
-	color: gray;
-}
 
 input[type=text] {
 	width: 100%;
@@ -87,13 +74,13 @@ input[type=submit]:hover {
 </style>
 </head>
 <body>
-<header style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px; padding-left: 30px; " >  
+  <header style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px; padding-left: 30px; " >  
   <i class='fas fa-phone' style="color: white;"></i>: 209-223-1814  
 
-<i class='fas fa-envelope' style="color: white; padding-left: 5pt;" ></i> : <a href="mailto:karenhale@karenhale.com " class= "link">karenhale@karenhale.com</a>
+<i class='fas fa-envelope' style="color: white; padding-left: 5pt;" ></i> : <a href="mailto:karenhale@karenhale.com" class= "link" style="color: white;">karenhale@karenhale.com</a>
 </header >
   <div style="width:100%; background-color:lightblue; background-image: url(backgroundi.jpg); background-repeat: no-repeat; height: 1000%; border-image-width: 100px">
-    <table align=center>
+    <table align=center >
       <tr >
         <td align=center style = "padding-top: 0px; color: white;">
           <p style="font-size: 50pt;  font-family: arial">KAREN HALE</p>
@@ -106,12 +93,19 @@ input[type=submit]:hover {
           
  
           <div class = "navbar" align = center>
-            <a href="#home">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="#news">PORTFOLIO</a>
-            <a href="#purchase">PURCHASE</a>
-            <a href="#galleries">GALLERIES</a>
-            <a href="#events">EVENTS</a>
-            <a href="temp_contact.html">ABOUT</a>
+            <a href="purchase.html">PURCHASE</a>
+            <a href="gallery.html">GALLERIES</a>
+            <a href="events.html">EVENTS</a>
+            <div class="dropdown">
+              <button class="dropbtn">ABOUT
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+              <a href="#">BIOGRAPHY</a>
+              <a href="contact.html">CONTACT</a>
+              <a href="#">FAQ</a></div></div>
             <a href="#youtube">YOUTUBE</a>
             <a href="#blog">BLOG</a>
           </div>
@@ -208,21 +202,19 @@ JACKSON, CA 95642
 </tr>
 		</table>
 	</div>
-
-	<footer style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px;">
-  <table width = "100%">
+<footer style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px;">
+  <table width = "100%" style="margin: 35px; font-family: arial;">
     <tr>
-      <td width="50%" align= "center" style="color: grey">Prices and any other information about the paintings may be obtained by <br><a href="contact.html" style="color: white">contacting me directly via email </a>or phone at 209-223-1814.
+      <td align= "padding-left" style="color: grey">Prices and any other information about the paintings may be obtained by <br><p><a href="contact.html" style="color: white;">contacting me directly via email </a></p>or phone at 209-223-1814.
       </td>
-      <td width="50%" align= "center" style="color: grey">All artwork appearing on this website <br>is the property of Karen Hale and <br>is protected under United States and <br>International law. The artwork may <br>not be reproduced, stored, or <br>manipulated without the written permission <br>of the artist.
+      <td align= "padding-left" style="color: grey;">All artwork appearing on this website <br>is the property of Karen Hale and <br>is protected under United States and <br>International law. The artwork may <br>not be reproduced, stored, or <br>manipulated without the written permission <br>of the artist.
       </td>
     </tr>
     <tr>
-      <td colspan="2" align= "center" style="color: grey">© 2019 <a href="index.html" style="color: white">Karen Hale. </a>All rights reserved.
+      <td colspan="2" align= "center" style="color: grey;"><hr><br>© 2019 <a href="index.html" style="color: white">Karen Hale</a>. All rights reserved.
       </td>
     </tr>
   </table>
   </footer>
-
 </body>
 </html>
