--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,20 @@ input[type=submit]:hover {
  
           <div class = "navbar" align = center>
             <a href="index.html">HOME</a>
-            <a href="#news">PORTFOLIO</a>
+            <div class="dropdown">
+              <button class="dropbtn">PORTFOLIO
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+              <a href="#">LATEST WORK</a>
+              <a href="#">MINI PAINTINGS</a>
+              <a href="#">SMALL PAINTINGS</a>
+              <a href="#">FLORALS</a>
+              <a href="#">STICKS</a>
+              <a href="#">SCULPTURAL</a>
+              <a href="#">ABSTRACTS</a>
+              <a href="landscapes.HTML">LANDSCAPES</a>
+              </div></div>
             <a href="purchase.html">PURCHASE</a>
             <a href="gallery.html">GALLERIES</a>
             <a href="events.html">EVENTS</a>
