--- a/landscapes.html
+++ b/landscapes.html
@@ -100,24 +100,38 @@
   </div>
 	<h1 style="text-align: center; font-family: arial;"><b>LANDSCAPES</b></h1>
 	<hr><br>
-	<div class="row_landscape">
-<!--    <div class="column_landscape">
-    
-  </div>  -->
-  <div class="column_landscape">
-  	<img src="landscapes1.jpg" style="width: 100%">
-    <img src="landscapes2.jpg" style="width: 100%">
-    <img src="landscapes3.jpg" style="width: 100%">
-    <img src="landscapes4.jpg" style="width: 100%">
-  </div>
-</div>
-  <div class="row_landscape">
-  <div class="column_landscape">
-    <img src="landscapes5.jpg" style="width:80%; height:80%">
-    <img src="landscapes6.jpg" style="width:80%; height:80%">
-    <img src="landscapes8.jpg" style="width:80%; height:80%">
-  </div>
-</div>
+	<div class="grid">
+      <div class="gallary">
+      <img src="landscapes1.jpg" class="img img1">
+      <img src="landscapes2.jpg" class="img img2">
+      <img src="landscapes3.jpg"  class="img img3">
+      <img src="landscapes4.jpg"  class="img img4">
+      <img src="landscapes5.jpg"  class="img img5">
+      <img src="landscapes6.jpg"  class="img img6">
+      <img src="landscapes7.jpg" class="img img7">
+      <img src="landscapes8.jpg" class="img img8">
+      <img src="landscapes9.jpg"  class="img img9">
+      <img src="landscapes10.jpg"  class="img img10">
+      <img src="landscapes11.jpg"  class="img img11">
+      <img src="landscapes12.jpg"  class="img img12">
+      <img src="landscapes13.jpg"  class="img img13">
+      <img src="landscapes14.jpg"  class="img img14">
+      <img src="landscapes15.jpg"  class="img img15">
+      <img src="landscapes16.jpg"  class="img img16">
+      <img src="landscapes17.jpg"  class="img img17">
+      <img src="landscapes18.jpg"  class="img img18">
+      <img src="landscapes19.jpg"  class="img img19">
+      <img src="landscapes20.jpg"  class="img img20">
+      <img src="landscapes21.jpg"  class="img img21">
+      <img src="landscapes22.jpg"  class="img img22">
+      <img src="landscapes23.jpg"  class="img img23">
+      <img src="landscapes24.jpg"  class="img img24">
+      <img src="landscapes25.jpg"  class="img img25">
+      <img src="landscapes26.jpg"  class="img img26">
+      <img src="landscapes27.jpg"  class="img img27">
+      <img src="landscapes28.jpg"  class="img img28">
+      </div>
+    </div>
 <footer style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px;">
   <table width = "100%" style="margin: 35px; font-family: arial;">
     <tr>
