--- a/purchase-2.html
+++ b/purchase-2.html
@@ -71,7 +71,177 @@ h1 {
 .title-design-centered .entry-header {
     text-align: center;
 }
+.page-title {
+    width: 100%;
+    border-bottom: 1px solid rgba(168,168,168,.15);
+    position: relative;
+    margin-top: -40px;
+    margin-bottom: 40px;
+}
+div {
+	display: block;
+}
+.row {
+    margin-left: -15px;
+    margin-right: -15px;
+}
+.site-content {
+    margin-bottom: 40px;
+}
+.site-content {
+    margin-bottom: 40px;
+}
+article {
+ display: block;
+}
+.vc_row {
+    margin-left: -15px;
+    margin-right: -15px;
+}
+.vc_column_container {
+    padding-left: 0;
+    padding-right: 0;
+}
+.vc_column_container>.vc_column-inner {
+    box-sizing: border-box;
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 100%;
+}
+h3 {
+	font-family: Raleway,Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    color: #000000;
+    font-size: 22px;
+}
+.entry-content a {
+    color: #c75035;
+}
+h3 a {
+	font-family: Raleway,Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+.vc_column_container>.vc_column-inner {
+    box-sizing: border-box;
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 100%;
+}
+.wpb_content_element, ul.wpb_thumbnails-fluid>li {
+    margin-bottom: 35px;
+}
+p {font-family: "Open Sans",Arial, Helvetica, sans-serif;
+    color: #000000;
+    font-size: 14px;
+    margin-bottom: 20px;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+a {transition: all .2s;
+   margin: 0;
+    padding: 0;
+    border: 0;
+    font: inherit;
+    /* font-size: 100%; */
+    vertical-align: baseline;
+}
+element.style {
+    text-align: left;
+}
+.alignleft {
+    float: left;
+    margin-top: 3px;
+    /* margin-bottom: 20px; */
+    margin-right: 25px;
+}
+.entry-content img, .entry-summary img, .wp-caption {
+    max-width: 100%;
+}
+img {
+    /* max-width: 100%; */
+    height: auto;
+    vertical-align: middle;
+}
+body {
+    /* font-family: Karla,Arial,Helvetica,sans-serif; */
+    /* background-color: #fff; */
+    -webkit-font-smoothing: antialiased;
+    color: #000000;
+    font-size: 14px;
+}
+.testimonials.testimonials-grid {
+    display: flexbox;
+    /* display: flex; */
+    display: -webkit-flex;
+    display: -ms-flex;
+    /* flex-direction: row; */
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    /* -webkit-align-items: stretch; */
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    /* -webkit-flex-wrap: wrap; */
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    /* -webkit-justify-content: center; */
+    -ms-justify-content: center;
+    justify-content: center;
+    margin-left: -15px;
+    margin-right: -15px;
+}
+.testimonials.testimon-align-center {
+    text-align: center;
+}
+.testimonial {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.testimonials.testimonials-grid .testimonial {
+    margin-bottom: 30px;
+}
+.testimonials.testimonials-grid.testimon-columns-1 .testimonial {
+    /* -webkit-flex-basis: 100%; */
+    -ms-flex-basis: 100%;
+    flex-basis: 100%;
+    max-width: 100%;
+    width: 100%;
+}
+.testimonials.testimon-style-boxed .testimonial-inner {
+    padding: 30px;
+    background-color: #fff;
+    box-shadow: 0 0 7px rgba(0,0,0,.12);
+}
+.testimonial .testimonial-content {
+    color: #4C4C4C;
+}
+.testimonial .testimonial-rating {
+    display: none;
+    margin-bottom: 10px;
+    font-size: 0;
+}
+.star-rating {
+    display: inline-block;
+    font-size: 12px;
+    position: relative;
+    height: 18px;
+    line-height: 18px;
+    letter-spacing: 2px;
+    width: 66px;
+    font-family: FontAwesome;
+    white-space: nowrap;
+}
 	</style>
+
+
+
+
+
+
 
 
 </head>
