--- a/purchase-2.html
+++ b/purchase-2.html
@@ -235,7 +235,95 @@ body {
     font-family: FontAwesome;
     white-space: nowrap;
 }
+span{
+	margin: 0;
+    padding: 0;
+    border: 0;
+    font: inherit;
+    /* font-size: 100%; */
+    vertical-align: baseline;
+}
+.star-rating span {
+    overflow: hidden;
+    float: left;
+    top: 0;
+    left: 0;
+    height: 18px;
+    position: absolute;
+    font-size: 0;
+    display: inline-block;
+    font-size: 12px;
+    position: relative;
+    height: 18px;
+    line-height: 18px;
+    letter-spacing: 2px;
+    width: 66px;
+    font-family: FontAwesome;
+    white-space: nowrap;
+}
+.testimonial .testimonial-content footer {
+    margin-top: 15px;
+    font-weight: 700;
+    color: #1B1919;
+}
+footer { 
+display: block;
+ }
+ .testimonial .testimonial-content footer>span {
+    color: #4C4C4C;
+    font-weight: 400;
+}
+.testimonials.testimonials-grid.testimon-columns-1 .testimonial {
+    /* -webkit-flex-basis: 100%; */
+    -ms-flex-basis: 100%;
+    flex-basis: 100%;
+    max-width: 100%;
+    width: 100%;
+}
+.testimonials.testimonials-grid .testimonial {
+    margin-bottom: 30px;
+}
+.testimonials.testimon-style-boxed .testimonial-inner {
+    padding: 30px;
+    background-color: #fff;
+    box-shadow: 0 0 7px rgba(0,0,0,.12);
+}
+.footer-container.color-scheme-light {
+    color: rgba(255,255,255,.6);
+}
+.footer-container {
+    background-color: #000000;
+    width: 100%;
+    display: block;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font: inherit;
+    /* font-size: 100%; */
+    vertical-align: baseline;
+}
+.footer-container .widget-area {
+    padding: 50px 0 20px 0;
+}
+aside {
+	display: block;
+}
+.row {
+    margin-left: -15px;
+    margin-right: -15px;
+}
+.footer-container .footer-column {
+    margin-bottom: 30px;
+}
+.footer-container .footer-widget:last-child {
+    margin-bottom: 0;
+}
+.footer-container.color-scheme-light p {
+    color: rgba(255,255,255,.6);
+}
+
 	</style>
+
 
 
 
@@ -394,5 +482,35 @@ body {
 					</div> <!-- end row -->
 			</div> <!-- end container -->
 					</div>
+					<footer class="footer-container color-scheme-light">
+		
+			<div class="container main-footer">
+		<aside class="footer-sidebar widget-area row" role="complementary">
+									<div class="footer-column footer-column-1 col-sm-4">
+							<div id="text-2" class="footer-widget  widget_text">			<div class="textwidget"><p>Prices and any other information about the paintings may be obtained by <a href="mailto:karenhale@karenhale.com">contacting me directly via email</a>&nbsp;or phone at 209-223-1814.</p>
+<p>&nbsp;</p>
+</div>
+		</div>						</div>
+																	<div class="footer-column footer-column-2 col-sm-4">
+													</div>
+																	<div class="footer-column footer-column-3 col-sm-4">
+							<div id="text-3" class="footer-widget  widget_text">			<div class="textwidget"><p>All artwork appearing on this website is the property of Karen Hale and is protected under United States and International law.  The artwork may not be reproduced, stored, or manipulated without the written permission of the artist.</p>
+</div>
+		</div>						</div>
+													</aside><!-- .footer-sidebar -->
+	</div>
+	
+
+					<div class="copyrights-wrapper copyrights-centered">
+				<div class="container">
+					<div class="min-footer">
+						<div class="col-left">
+															<p>© 2019 <a href="http://www.karenhale.com/">Karen Hale</a>. All rights reserved</p>
+													</div>
+											</div>
+				</div>
+			</div>
+				
+	</footer>
 </body>
 </html>
