--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Gallery - Karen Hale</title>
+	<title>Galleries - Karen Hale</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<style type="text/css">
-		.row {
+		/*.row {
     margin-left: -15px;
     margin-right: -15px;
 }
@@ -58,7 +58,7 @@ body {
     height: auto;
     max-width: 100%;
     vertical-align: top;
-}
+}*/
 	</style>
 </head>
 <body>
@@ -116,8 +116,89 @@ body {
       </tr> 
     </table>
   </div>
-	<h1 align="center">Galleries</h1>
-<div class="container">
+	<h1 style="text-align: center; font-family: arial;"><b>Galleries</b></h1><hr>
+    <table style="margin: 35px;">
+    <tr>
+      <td>
+        <img src="Gallery1.jpg" style="width: 300px; height: 300px;">
+        <p style="text-align: justify; font-family: arial">
+          I have been selected to exhibit with<br>
+          Carre’ d’Artistes, a French Gallery with<br>
+          over 35 locations worldwide. It features<br>
+          a unique display of small affordable<br>
+          original paintings.  My paintings are<br>
+          now available at <a href="https://www.carredartistes.com/us/1142-art-online-gallery-contemporary-artist-rosa-bordeaux">Carré d’artistes</a><br>in Sedona, Arizona</p>
+      </td>
+      <td>
+        <img src="Gallery2.jpg" style="width: 300px; height: 300px;">
+        <p style="text-align: justify; font-family: arial">
+        I have been chosen to be a featured<br>
+        artist in the winter 2015 edition of the<br>
+      magazine “Acrylic Artist”</p>
+      </td>
+      <td>
+        <img src="Gallery3.jpg" style="width: 300px; height: 300px;">
+        <p style="text-align: justify; font-family: arial">
+        My painting “Gold Accents” was selected<br>
+        to be on the cover of American Journal<br>
+      of Critical Care, January 2013 issue.</p>
+      </td>
+    </tr>
+  </table>
+  <table style="margin-left: 35px; display: inline-block;">
+    <tr>
+      <td><h3><b>My pieces are available at these online locations</b></h3><br>
+        <table>
+          <tr>
+            <td>
+              <a href="#"><img src="galleryloc1.jpeg"></a>
+            </td>
+            <td>
+              <a href="#"><img src="galleryloc2.jpeg" style="width: 150px; height: 50px;"></a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="#"><img src="galleryloc3.jpeg" style="width: 150px; height: 50px;"></a>
+            </td>
+            <td>
+              <a href="#"><img src="galleryloc4.jpeg" style="width: 150px; height: 50px;"></a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="#"><img src="galleryloc5.jpeg" style="width: 150px; height: 50px;"></a>
+            </td>
+            <td>
+              <a href="#"><img src="galleryloc6.jpeg"></a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="#"><img src="galleryloc7.jpeg" style="width: 150px; height: 50px;"></a>
+            </td>
+            <td>
+              <a href="#"><img src="galleryloc8.jpeg" style="width: 150px; height: 50px;"></a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="#"><img src="galleryloc9.jpeg" style="width: 150px"></a>
+            </td>
+            <td>
+              <a href="#"><img src="galleryloc10.jpeg"></a>
+            </td>
+          </tr>
+        </table></td>
+    </tr>
+  </table>
+    <table style="float: right; margin-right: 35px;">
+      <tr>
+        <td><h3><b><a href="" style="color: red;">Painting Demonstrations and more on YouTube</a></b></h3></td>
+      </tr>
+      <tr><td><a href=""><img src="paintingdemo.jpg" style="width: 350px; height: 200px;"></a></td></tr>
+    </table>
+<!-- <div class="container">
 			<div class="row">
 		
 
@@ -170,7 +251,7 @@ body {
 	</div>
 </div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element">
-		<div class="wpb_wrapper">
+		<div class="wpb_wrapper"> -->
 
 	<footer style="background-color: black; color: white; padding-top: 15px; padding-bottom: 15px;">
   <table width = "100%" style="margin: 35px; font-family: arial;">
