--- a/gallery.html
+++ b/gallery.html
@@ -194,9 +194,9 @@ body {
   </table>
     <table style="float: right; margin-right: 35px;">
       <tr>
-        <td><h3><b><a href="" style="color: red;">Painting Demonstrations and more on YouTube</a></b></h3></td>
+        <td><h3><b><a href="https://www.youtube.com/user/karenjeanjellybean/" style="color: red;">Painting Demonstrations and more on YouTube</a></b></h3></td>
       </tr>
-      <tr><td><a href=""><img src="paintingdemo.jpg" style="width: 350px; height: 200px;"></a></td></tr>
+      <tr><td><a href="https://www.youtube.com/user/karenjeanjellybean/"><img src="paintingdemo.jpg" style="width: 350px; height: 200px;"></a></td></tr>
     </table>
 <!-- <div class="container">
 			<div class="row">
